# vocalstar

./: .gitmodules  LICENSE  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  Engine.cpp  HelloOboeEngine.cpp  HelloOboeEngine.h  LatencyTuningCallback.cpp  LatencyTuningCallback.h  LiveEffectEngine.cpp  SoundGenerator.cpp  SoundGenerator.h  native-lib.cpp
android/app/src/main/cpp/DSP/: CombFilter.cpp  CombFilter2.cpp  DSP.cpp  DSP.h  EnvelopeFollower.h  FilterButterworth24.cpp  Limiter.h  MyFilter.cpp  Reverb.h  mix-matrix.h
android/app/src/main/cpp/DSP/dsp_lib/: CIC.cpp  CIC.h  CombFilter.h  CombFilter2.h  DSP.h  FilterButterworth24.h  Limiter.h  MyFilter.h  Reverb.h
android/app/src/main/cpp/include/: DefaultDataCallback.h  Engine.h  FullDuplexPass.h  HelloOboeEngine.h  LatencyTuningCallback.h  LiveEffectEngine.h  SoundGenerator.h
android/app/src/main/cpp/shared/: DefaultErrorCallback.h
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
art/master/: shot1.afphoto  shot2.afphoto  shot3.afphoto
ios/Vocalstar/: AboutView.swift  AudioController.swift  AudioFx.swift  CAXException.swift  ContentView.swift  CustomSlider.swift  DSP.cpp  DSP.hpp  DeviceView.swift  Engine.swift  EnvelopeFollower.h  Extensions.swift  HomeView.swift  HomeViewSSE.swift  Info.plist  IosPlayer.swift  Limiter.h  MusicProgressSlider.swift  NumTypes+Conversion.swift  PlayView.swift  Protocols.swift  RingBuffer.swift  VideoBgView.swift  VocalstarApp.swift
ios/Vocalstar.xcodeproj/: project.pbxproj
ios/Vocalstar.xcodeproj/xcshareddata/xcschemes/: Vocalstar 1.xcscheme  Vocalstar.xcscheme
ios/Vocalstar/fonts/: UIDesign.swift
(+80 files in other folders)
